# yt-tui

./: Cargo.toml  LICENSE
src/: app.rs  main.rs  message.rs  ui.rs
src/yt_dlp/: info.rs
